--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Заголовок страницы</title>
 </head>
-<body>
+<p>Приближается один из любимых праздников в России — Новый год!Это время волшебства, тёплых встреч, мандаринов и исполнения самых заветных желаний. В преддверии праздника хочется окунуться в атмосфера уюта и радости, украшать ёлку, писать письма Деду Морозу и готовиться к ночи чудес. Особенно приятно проводить долгие декабрьские вечера за увлекательными и полезными занятиями — например, за разгадыванием кроссвордов.</p>
+<p>Для ценителей родного языка я подготовила русский кроссворд, в котором зашифрованы знакомые с детства новогодние слова: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка», «мандаларин» и другие символы праздника. Каждое отгаданное слово — как маленькое чудо, приближающее нас к волшебству. Такой кроссворд отлично подойдёт как для семейного досуга, так и для школьных заданий.</p>
+<p>А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, обязательно понравится английский кроссворд. В нём вы встретите такие слова, как snowflake, fireworks, gift, celebration, Santa Claus и New Year’s Eve. Разгадывая его, вы не только получите удовольствие, но и расширите словарный запас. Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
     <!-- Содержимое страницы -->
 </body>
 </html>
