--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+<p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="новый год иконки">Новый год иконки от Pixelmeetup - Flaticon</a>
+</p>
 </body>
 </html>
