--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h2> 01.12 , 2025</h2>
-<img src=“Icons/имя .png” alt=“Новый год”>
+<img src=“Icons/https://www.flaticon.com/ru/free-icons/-.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 <h2> 15 октября , 2025</h2>
 <p>
-Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
+Я сделала Новогодние кроссворды для сайта <a href=“http://vika200925.github.io/Hello-world/”  title=“Блог моего друга”Сайт моего друга</a>
 </p>
 <h2> 1 сентября , 2025</h2>
 <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
