--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+    <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 01.12 , 2025</h2>
 <img src=“Icons/https://www.flaticon.com/ru/free-icons/-.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
