--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+    <p>Создано: 14 января 2026</p>
+    <p>Домен - qwer67bh github io . </p>
+    <p><a> href="mailto:tarasovanasta099@gimail.com">Напишите мне</a></p>
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 01.12 , 2025</h2>
 <img src=“Icons/https://www.flaticon.com/ru/free-icons/-.png” alt=“Новый год”>
