--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+    <p>Создано: 19 января 2026</p>
     <p>Создано: 14 января 2026</p>
     <p>Домен - qwer67bh github io . </p>
     <p><a href="mailto:tarasovanasta099@gimail.com">Напишите мне</a></p>
