--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 <body>
     <p>Создано: 19 января 2026</p>
+    <p># Решение задачи по шифру Цезаря
+
+## Часть 1: Определение ключа шифра
+
+- **а.** АПЕЛЬСИН → САЦЬНВЩЮ → **ключ = 17**  
+- **б.** АБРИКОС → ЫЬЛГЕЙМ → **ключ = 27**
+
+## Ча часть 2: Расшифровка
+
+- **а.** `ФХНЗКЧ` → **ПРИВЕТ**  
+- **б.** `ЦЩЕБФ` → **ВЕСНА**
+
+## Часть 3: Шифрование фамилии
+
+Фамилия: **ТАРАСОВА**  
+Ключ: **10**  
+Результат: **ЬКЪКЫШМК**<p/>
     <p>Создано: 14 января 2026</p>
     <p>Домен - qwer67bh github io . </p>
     <p><a href="mailto:tarasovanasta099@gimail.com">Напишите мне</a></p>
