--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <p>Создано: 19 января 2026</p>
     <p># Решение задачи по шифру Цезаря<p/>
-<p>- **а.** АПЕЛЬСИН → САЦЬНВЩЮ → **ключ = 17**<p/>  
-<p>- **б.** АБРИКОС → ЫЬЛГЕЙМ → **ключ = 27**<p/>
-<p>- **а.** `ФХНЗКЧ` → **ПРИВЕТ**  <p/>
-<p>- **б.** `ЦЩЕБФ` → **ВЕСНА**<p/>
+<p>- а. АПЕЛЬСИН → САЦЬНВЩЮ → **ключ = 17**<p/>  
+<p>- б. АБРИКОС → ЫЬЛГЕЙМ → **ключ = 27**<p/>
+<p>- а. `ФХНЗКЧ` → **ПРИВЕТ**  <p/>
+<p>- б. `ЦЩЕБФ` → **ВЕСНА**<p/>
 <p>Фамилия: **ТАРАСОВА**  <p?>
 <p>Ключ: **10** <p/> 
 <p>Результат: **ЬКЪКЫШМК**<p/>
