--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
     <h2> 01.12 , 2025</h2>
 <img src=“Icons/https://www.flaticon.com/ru/free-icons/-.png” alt=“Новый год”>
-    <img src="my-image.jpg" alt="Описание изображения">
+    <img src="my-image.jpg" alt="">
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 <h2> 15 октября , 2025</h2>
 <p>
