--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Привет, мир!</title>
 </head>
 <body>
-    <p>Создано: 19 января 2026</p>
+    <h2>Создано: 19 января 2026</h2>
     <p># Решение задачи по шифру Цезаря<p/>
 <p>- а. АПЕЛЬСИН → САЦЬНВЩЮ → **ключ = 17**<p/>  
 <p>- б. АБРИКОС → ЫЬЛГЕЙМ → **ключ = 27**<p/>
@@ -17,7 +17,7 @@
 <p>Фамилия: **ТАРАСОВА**  <p?>
 <p>Ключ: **10** <p/> 
 <p>Результат: **ЬКЪКЫШМК**<p/>
-    <p>Создано: 14 января 2026</p>
+    <h2>Создано: 14 января 2026</h2>
     <p>Домен - qwer67bh github io . </p>
     <p><a href="mailto:tarasovanasta099@gimail.com">Напишите мне</a></p>
     <blockquote class=“q”>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
