--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
 <title>Мой блог</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link type="text/css"/>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
