--- a/index.html
+++ b/index.html
@@ -10,6 +10,212 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+    <h2>Создано: 21 января 2026</h2>
+    <!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Учебный RSA</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    .step {
+      background: white;
+      padding: 15px;
+      margin: 15px 0;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    input {
+      width: 60px;
+      padding: 5px;
+      font-size: 16px;
+      margin: 0 5px;
+    }
+    button {
+      padding: 8px 16px;
+      background: #3498db;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background: #2980b9;
+    }
+    .result {
+      margin-top: 10px;
+      padding: 10px;
+      background: #e8f4fc;
+      border-left: 4px solid #3498db;
+    }
+    .warning {
+      background: #fff8e1;
+      color: #e65100;
+      padding: 10px;
+      border-left: 4px solid #ffb300;
+    }
+    code {
+      background: #eee;
+      padding: 2px 6px;
+      border-radius: 3px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>🔐 Учебный пример RSA</h1>
+
+  <div class="warning">
+    ⚠️ Этот пример использует маленькие числа только для обучения. 
+    Никогда не используйте такие параметры в реальных системах!
+  </div>
+
+  <div class="step">
+    <h2>1. Выберите простые числа p и q</h2>
+    <label>p = <input type="number" id="p" value="3" min="2"></label>
+    <label>q = <input type="number" id="q" value="5" min="2"></label>
+    <button onclick="calculate()">Рассчитать ключи</button>
+  </div>
+
+  <div id="output"></div>
+
+  <script>
+    // Проверка на простое число
+    function isPrime(num) {
+      if (num < 2) return false;
+      if (num === 2) return true;
+      if (num % 2 === 0) return false;
+      for (let i = 3; i <= Math.sqrt(num); i += 2) {
+        if (num % i === 0) return false;
+      }
+      return true;
+    }
+
+    // НОД (алгоритм Евклида)
+    function gcd(a, b) {
+      while (b !== 0) {
+        [a, b] = [b, a % b];
+      }
+      return a;
+    }
+
+    // Нахождение d: e * d ≡ 1 (mod phi)
+    function modInverse(e, phi) {
+      for (let d = 1; d < phi; d++) {
+        if ((e * d) % phi === 1) {
+          return d;
+        }
+      }
+      return null;
+    }
+
+    // Шифрование
+    function encrypt(m, e, n) {
+      return BigInt(m) ** BigInt(e) % BigInt(n);
+    }
+
+    // Расшифровка
+    function decrypt(c, d, n) {
+      return BigInt(c) ** BigInt(d) % BigInt(n);
+    }
+
+    function calculate() {
+      const p = parseInt(document.getElementById('p').value);
+      const q = parseInt(document.getElementById('q').value);
+
+      const output = document.getElementById('output');
+      output.innerHTML = '';
+
+      if (!isPrime(p)) {
+        output.innerHTML += `<div class="warning">❌ p = ${p} не является простым числом!</div>`;
+        return;
+      }
+      if (!isPrime(q)) {
+        output.innerHTML += `<div class="warning">❌ q = ${q} не является простым числом!</div>`;
+        return;
+      }
+      if (p === q) {
+        output.innerHTML += `<div class="warning">⚠️ Лучше выбирать разные простые числа (p ≠ q).</div>`;
+      }
+
+      const n = p * q;
+      const phi = (p - 1) * (q - 1);
+
+      // Найдём подходящее e
+      let e = 3;
+      while (e < phi) {
+        if (gcd(e, phi) === 1) break;
+        e++;
+      }
+      if (e >= phi) {
+        output.innerHTML += `<div class="warning">Не удалось найти подходящее e.</div>`;
+        return;
+      }
+
+      const d = modInverse(e, phi);
+      if (d === null) {
+        output.innerHTML += `<div class="warning">Не удалось найти d.</div>`;
+        return;
+      }
+
+      // Пример сообщения
+      let m = 2;
+      if (m >= n || gcd(m, n) !== 1) {
+        // Найдём первое подходящее m
+        for (let test = 2; test < n; test++) {
+          if (gcd(test, n) === 1) {
+            m = test;
+            break;
+          }
+        }
+      }
+
+      const c = Number(encrypt(m, e, n));
+      const decrypted = Number(decrypt(c, d, n));
+
+      output.innerHTML = `
+        <div class="step">
+          <h2>2. Результаты расчётов</h2>
+          <p><strong>n = p × q = ${p} × ${q} = ${n}</strong></p>
+          <p><strong>φ(n) = (p−1)(q−1) = ${p-1} × ${q-1} = ${phi}</strong></p>
+          <p><strong>e = ${e}</strong> (выбрано так, что НОД(e, φ(n)) = 1)</p>
+          <p><strong>d = ${d}</strong> (потому что (${e} × ${d}) mod ${phi} = ${(e * d) % phi})</p>
+        </div>
+
+        <div class="step">
+          <h2>3. Ключи</h2>
+          <p>🔑 <strong>Открытый ключ:</strong> <code>(n=${n}, e=${e})</code></p>
+          <p>🔒 <strong>Закрытый ключ:</strong> <code>(n=${n}, d=${d})</code></p>
+        </div>
+
+        <div class="step">
+          <h2>4. Пример шифрования</h2>
+          <p>Сообщение: <code>m = ${m}</code></p>
+          <p>Шифротекст: <code>c = m<sup>e</sup> mod n = ${m}<sup>${e}</sup> mod ${n} = ${c}</code></p>
+          <p>Расшифровка: <code>c<sup>d</sup> mod n = ${c}<sup>${d}</sup> mod ${n} = ${decrypted}</code></p>
+          ${decrypted === m ? '<p style="color:green">✅ Успешно! Сообщение восстановлено.</p>' : '<p style="color:red">❌ Ошибка при расшифровке.</p>'}
+        </div>
+      `;
+    }
+
+    // Запустить при загрузке
+    window.onload = calculate;
+  </script>
+
+</body>
+</html>
     <h2>Создано: 19 января 2026</h2>
     <p># Решение задачи по шифру Цезаря<p/>
 <p>- а. АПЕЛЬСИН → САЦЬНВЩЮ → **ключ = 17**<p/>  
