--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
     <h2>Создано: 21 января 2026</h2>
     <!DOCTYPE html>
 <html lang="ru">
+    <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Учебный RSA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Public Sans', Arial, sans-serif;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    /* остальной CSS без изменений */
+  </style>
+</head>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
