--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     <h2>Создано: 21 января 2026</h2>
     <!DOCTYPE html>
 <html lang="ru">
-    <head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Учебный RSA</title>
+  <!-- Подключаем шрифт Public Sans из Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Public Sans', Arial, sans-serif;
+      /* Используем Public Sans как основной шрифт */
+      font-family: 'Public Sans', sans-serif;
       max-width: 800px;
       margin: 30px auto;
       padding: 20px;
       background-color: #f9f9f9;
       color: #333;
     }
-      
     h1, h2 {
       color: #2c3e50;
     }
@@ -56,12 +57,6 @@
     button:hover {
       background: #2980b9;
     }
-    .result {
-      margin-top: 10px;
-      padding: 10px;
-      background: #e8f4fc;
-      border-left: 4px solid #3498db;
-    }
     .warning {
       background: #fff8e1;
       color: #e65100;
@@ -72,6 +67,7 @@
       background: #eee;
       padding: 2px 6px;
       border-radius: 3px;
+      font-family: 'Public Sans', monospace; /* чтобы код тоже выглядел аккуратно */
     }
   </style>
 </head>
@@ -94,7 +90,6 @@
   <div id="output"></div>
 
   <script>
-    // Проверка на простое число
     function isPrime(num) {
       if (num < 2) return false;
       if (num === 2) return true;
@@ -105,7 +100,6 @@
       return true;
     }
 
-    // НОД (алгоритм Евклида)
     function gcd(a, b) {
       while (b !== 0) {
         [a, b] = [b, a % b];
@@ -113,7 +107,6 @@
       return a;
     }
 
-    // Нахождение d: e * d ≡ 1 (mod phi)
     function modInverse(e, phi) {
       for (let d = 1; d < phi; d++) {
         if ((e * d) % phi === 1) {
@@ -123,12 +116,10 @@
       return null;
     }
 
-    // Шифрование
     function encrypt(m, e, n) {
       return BigInt(m) ** BigInt(e) % BigInt(n);
     }
 
-    // Расшифровка
     function decrypt(c, d, n) {
       return BigInt(c) ** BigInt(d) % BigInt(n);
     }
@@ -155,7 +146,6 @@
       const n = p * q;
       const phi = (p - 1) * (q - 1);
 
-      // Найдём подходящее e
       let e = 3;
       while (e < phi) {
         if (gcd(e, phi) === 1) break;
@@ -172,10 +162,8 @@
         return;
       }
 
-      // Пример сообщения
       let m = 2;
       if (m >= n || gcd(m, n) !== 1) {
-        // Найдём первое подходящее m
         for (let test = 2; test < n; test++) {
           if (gcd(test, n) === 1) {
             m = test;
@@ -205,14 +193,13 @@
         <div class="step">
           <h2>4. Пример шифрования</h2>
           <p>Сообщение: <code>m = ${m}</code></p>
-          <p>Шифротекст: <code>c = m<sup>e</sup> mod n = ${m}<sup>${e}</sup> mod ${n} = ${c}</code></p>
-          <p>Расшифровка: <code>c<sup>d</sup> mod n = ${c}<sup>${d}</sup> mod ${n} = ${decrypted}</code></p>
+          <p>Шифротекст: <code>c = m<sup>${e}</sup> mod ${n} = ${c}</code></p>
+          <p>Расшифровка: <code>c<sup>${d}</sup> mod ${n} = ${decrypted}</code></p>
           ${decrypted === m ? '<p style="color:green">✅ Успешно! Сообщение восстановлено.</p>' : '<p style="color:red">❌ Ошибка при расшифровке.</p>'}
         </div>
       `;
     }
 
-    // Запустить при загрузке
     window.onload = calculate;
   </script>
 
