--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Учебный RSA</title>
+  <title>Учебный RSA</title
+        <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   <!-- Подключаем шрифт Public Sans из Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
     body {
-      /* Используем Public Sans как основной шрифт */
-      font-family: 'Public Sans', sans-serif;
+      font-family: 'Public Sans', Arial, sans-serif;
       max-width: 800px;
       margin: 30px auto;
       padding: 20px;
