--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Привет, мир!</title>
 </head>
 <body>
+    <h2>Создано: 17 февраля 2026</h2>
+    
     <h2>Создано: 21 января 2026</h2>
     <!DOCTYPE html>
 <html lang="ru">
