--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h2>Создано: 17 февраля 2026</h2>
-    
+    <img src="image.png" alt="картинка 52ххахаха.jpg ">
     <h2>Создано: 21 января 2026</h2>
     <!DOCTYPE html>
 <html lang="ru">
